# meritRankerAgent

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  full_check_output.txt
app/: .env.local.example  config.py  logging_config.py  main.py  pyproject.toml
app/graphs/: __init__.py  demo_graph.py  doubt_solver_graph.py
app/prompts/: answer_generator.md  demo.md  generator_answer_contract.md  query_classifier.md
app/schemas/: __init__.py  doubt_solver.py  llm.py  llm_orchestration.py  llm_routing.py  records.py  request.py  response.py  retrieval.py  state.py  streaming.py
app/scripts/: smoke_llm_orchestration.py
app/services/: answer_generator_service.py  aws_client_factory.py  bedrock_kb_service.py  context_builder_service.py  dynamodb_service.py  mock_response_service.py  model_router.py  prompt_loader.py  query_classifier_service.py  question_record_service.py  runtime_probe_service.py  streaming_adapter.py
app/tests/: README.md  __init__.py  conftest.py  test_answer_completion.py  test_answer_generator_service.py  test_answer_generator_service_orchestration_flag.py  test_answer_quality.py  test_aws_client_factory.py  test_azure_first_fallback.py  test_azure_openai_provider_adapter.py  test_bedrock_kb_retriever.py  test_bedrock_kb_service.py  test_classifier_json.py  test_config_validation.py  test_context_builder_service.py  test_context_retrieval_service.py  test_demo_graph.py  test_difficulty_classification.py  test_doubt_solver_graph.py  test_doubt_solver_schemas.py  test_dynamodb_service.py  (+45 more)
(+150 files in other folders)
