[project]
name = "meritrankertutor-agent"
version = "0.1.0"
description = "AgentCore + LangGraph demo agent — local foundation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bedrock-agentcore",
    "boto3>=1.26",
    "langgraph>=0.2",
    "openai>=2.38.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0.3",
    "rich>=13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.6",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort, B = bugbear, UP = pyupgrade
select = ["E", "W", "F", "I", "B", "UP"]
ignore = [
    "B008",  # do not perform function calls in default arguments
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
